--- a/solana/package.json
+++ b/solana/package.json
@@ -1,17 +1,32 @@
 {
+    "name": "@wormhole-foundation/swap-layer-solana",
+    "version": "1.0.0",
+    "description": "",
+    "main": "lib/cjs/index.js",
+    "module": "lib/esm/index.js",
+    "files": [
+        "dist/cjs",
+        "dist/esm"
+    ],
     "scripts": {
         "lint:fix": "prettier */*.js \"*/**/*{.js,.ts}\" -w",
-        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check"
+        "lint": "prettier */*.js \"*/**/*{.js,.ts}\" --check",
+        "test": "jest --config ./jest.config.ts --detectOpenHandles",
+        "build:cjs": "tsc -p tsconfig.cjs.json",
+        "build:esm": "tsc -p tsconfig.esm.json",
+        "build": "tsc -p tsconfig.json"
     },
     "dependencies": {
+        "@wormhole-foundation/sdk-base": "^0.6.5",
+        "@wormhole-foundation/sdk-definitions": "^0.6.5",
+        "@wormhole-foundation/sdk-solana": "^0.6.5",
+        "@wormhole-foundation/sdk-solana-core": "^0.6.5",
         "@certusone/wormhole-sdk": "^0.10.10",
         "@coral-xyz/anchor": "^0.30.0",
         "@jup-ag/api": "^6.0.20-test",
         "@solana/spl-token": "^0.4.3",
         "@solana/web3.js": "^1.91.6",
         "@types/node-fetch": "^2.6.11",
-        "@wormhole-foundation/sdk-base": "0.6.0-beta.0",
-        "@wormhole-foundation/sdk-definitions": "0.6.0-beta.0",
         "@wormhole-foundation/sdk-evm": "0.6.0-beta.0",
         "anchor-0.29.0": "npm:@coral-xyz/anchor@^0.29.0",
         "chai-as-promised": "^7.1.1",
@@ -19,6 +34,9 @@
         "tsx": "^4.7.2"
     },
     "devDependencies": {
+        "@types/node-fetch": "^2.6.11",
+        "tsx": "^4.7.2",
+        "ts-results": "^3.3.0",
         "@types/bn.js": "^5.1.0",
         "@types/chai": "^4.3.0",
         "@types/mocha": "^9.0.0",
@@ -26,7 +44,6 @@
         "chai": "^4.3.4",
         "mocha": "^9.0.3",
         "prettier": "^2.6.2",
-        "ts-mocha": "^10.0.0",
-        "typescript": "^4.3.5"
+        "ts-mocha": "^10.0.0"
     }
 }
