--- a/solana/Makefile
+++ b/solana/Makefile
@@ -39,15 +39,15 @@ cargo-test: fast-transfer-sync
 
 .PHONY: anchor-test
 anchor-test: ../node_modules $(CLONED_PROGRAMS)
-ifndef SKIP_SUBMODULE_BUILD
-	cd .. && $(MAKE) fast-transfer-setup
-endif
+# ifndef SKIP_SUBMODULE_BUILD
+# 	cd .. && $(MAKE) fast-transfer-setup
+# endif
 	anchor test -- --features integration-test
 
 .PHONY: anchor-build-idl
 anchor-build-idl:
 	anchor build -- --features localnet
-#	git diff --exit-code
+	git diff --exit-code
 
 .PHONY: cargo-test-all
 cargo-test-all:
