--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "npm run test --workspaces --if-present"
   },
   "dependencies": {
-    "@wormhole-foundation/sdk-base": "^0.6.5",
-    "@wormhole-foundation/sdk-definitions": "^0.6.5"
+    "@wormhole-foundation/sdk-base": "^0.6.8-beta.0",
+    "@wormhole-foundation/sdk-definitions": "^0.6.8-beta.0"
   },
   "devDependencies": {
     "typescript": "5.4.5",
