--- a/solana/Anchor.toml
+++ b/solana/Anchor.toml
@@ -22,7 +22,7 @@ cluster = "Localnet"
 wallet = "ts/tests/keys/pFCBP4bhqdSsrWUVTgqhPsLrfEdChBK17vgFM7TxjxQ.json"
 
 [scripts]
-test = "npx ts-mocha -p ./tsconfig.anchor-test.json -t 1000000 --exit ts/tests/[0-9]*.ts"
+test = "npx ts-mocha -p ./tsconfig.anchor-test.json -t 1000000 --bail --exit ts/tests/[0-9]*.ts"
 
 [test]
 startup_wait = 20000
