--- a/solana/package.json
+++ b/solana/package.json
@@ -24,11 +24,11 @@
         "@solana/web3.js": "^1.91.6",
         "@types/node-fetch": "^2.6.11",
         "@wormhole-foundation/example-liquidity-layer-solana": "file:../lib/example-liquidity-layer/wormhole-foundation-example-liquidity-layer-solana-0.0.1.tgz",
-        "@wormhole-foundation/sdk-base": "^0.6.8-beta.0",
-        "@wormhole-foundation/sdk-definitions": "^0.6.8-beta.0",
-        "@wormhole-foundation/sdk-evm": "0.6.8-beta.0",
-        "@wormhole-foundation/sdk-solana": "^0.6.8-beta.0",
-        "@wormhole-foundation/sdk-solana-core": "^0.6.8-beta.0",
+        "@wormhole-foundation/sdk-base": "^0.6.8",
+        "@wormhole-foundation/sdk-definitions": "^0.6.8",
+        "@wormhole-foundation/sdk-evm": "0.6.8",
+        "@wormhole-foundation/sdk-solana": "^0.6.8",
+        "@wormhole-foundation/sdk-solana-core": "^0.6.8",
         "anchor-0.29.0": "npm:@coral-xyz/anchor@^0.29.0",
         "chai-as-promised": "^7.1.1",
         "ts-results": "^3.3.0",
