--- a/solana/Anchor.toml
+++ b/solana/Anchor.toml
@@ -12,7 +12,7 @@ members = [
 ]
 
 [programs.localnet]
-swap_layer = "AQFz751pSuxMX6PFWx9uruoVSZ3qay2Zi33MJ4NmUF2m"
+swap_layer = "SwapLayer1111111111111111111111111111111111"
 
 [registry]
 url = "https://api.apr.dev"
@@ -221,25 +221,25 @@ filename = "ts/tests/accounts/whirlpool/whirlpool_usdt_vault.json"
 
 ### Whirlpool -- USDC-USDT Pool Tick Array 0
 [[test.validator.account]]
-address = "8kZSTVuV7C4GD9ZVR4wDtRSXv1SvsSQPfqUbthueRNGV"
-filename = "ts/tests/accounts/whirlpool/whirlpool_usdc_usdt_tick_array_0.json"
+address = "FqFkv2xNNCUyx1RYV61pGZ9AMzGfgcD8uXC9zCF5JKnR"
+filename = "ts/tests/accounts/whirlpool/whirlpool_usdc_usdt_tick_array__0.json"
 
-### Whirlpool -- USDC-USDT Pool Tick Array 1A
+### Whirlpool -- USDC-USDT Pool Tick Array 1
+[[test.validator.account]]
+address = "8kZSTVuV7C4GD9ZVR4wDtRSXv1SvsSQPfqUbthueRNGV"
+filename = "ts/tests/accounts/whirlpool/whirlpool_usdc_usdt_tick_array__1.json"
+
+### Whirlpool -- USDC-USDT Pool Tick Array 2
 [[test.validator.account]]
 address = "2B48L1ACPvVb67UKeSMkUGdzrnhvNMm6pFt2nspGKxs4"
-filename = "ts/tests/accounts/whirlpool/whirlpool_usdc_usdt_tick_array_1a.json"
+filename = "ts/tests/accounts/whirlpool/whirlpool_usdc_usdt_tick_array__2.json"
 
-### Whirlpool -- USDC-USDT Pool Tick Array 2A
-[[test.validator.account]]
-address = "BMGfBaW69aUm6hRdmsfAcNEmAW59C2rWJ9EX7gWnrVN9"
-filename = "ts/tests/accounts/whirlpool/whirlpool_usdc_usdt_tick_array_2a.json"
-
-### Whirlpool -- USDC-USDT Pool Tick Array 1B
-[[test.validator.account]]
-address = "FqFkv2xNNCUyx1RYV61pGZ9AMzGfgcD8uXC9zCF5JKnR"
-filename = "ts/tests/accounts/whirlpool/whirlpool_usdc_usdt_tick_array_1b.json"
-
-### Whirlpool -- USDC-USDT Pool Tick Array 2B
+### Whirlpool -- USDC-USDT Pool Tick Array 3
 [[test.validator.account]]
 address = "A7sdy3NoAZp49cQNpreMGARAb9QJjYrrSyDALhThgk3D"
-filename = "ts/tests/accounts/whirlpool/whirlpool_usdc_usdt_tick_array_2b.json"
+filename = "ts/tests/accounts/whirlpool/whirlpool_usdc_usdt_tick_array__3.json"
+
+### Whirlpool -- USDC-USDT Pool Tick Array 4
+[[test.validator.account]]
+address = "9opqNK3dWUijw8VNLtvne4juCTq1qADaph29tZqkoZHa"
+filename = "ts/tests/accounts/whirlpool/whirlpool_usdc_usdt_tick_array__4.json"
