add evm workflow file

--- a/.github/workflows/solana.yml
+++ b/.github/workflows/solana.yml
@@ -4,7 +4,9 @@ on:
     branches:
       - main
       - solana/integration
-  pull_request: null
+  pull_request:
+    paths:
+      - 'solana/**' 
 
 env:
   RUSTC_VERSION: 1.75.0
