--- a/evm/ts-sdk/package.json
+++ b/evm/ts-sdk/package.json
@@ -10,9 +10,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@wormhole-foundation/sdk-base": "^0.6.8",
-    "@wormhole-foundation/sdk-definitions": "^0.6.8",
-    "@wormhole-foundation/sdk-evm": "^0.6.8",
+    "@wormhole-foundation/sdk-base": "^0.7.0-beta.3",
+    "@wormhole-foundation/sdk-definitions": "^0.7.0-beta.3",
+    "@wormhole-foundation/sdk-evm": "^0.7.0-beta.3",
     "typescript": "^5.4.5"
   }
 }
