--- a/e2e/package.json
+++ b/e2e/package.json
@@ -7,15 +7,20 @@
         "test": "bash sh/run_test.sh"
     },
     "dependencies": {
+        "dotenv": "^16.4.5",
+        "prettier": "^3.2.5"
+    },
+    "devDependencies": {
         "@typechain/ethers-v5": "^11.1.2",
         "@types/chai": "^4.3.16",
         "@types/mocha": "^10.0.6",
         "@types/node": "^20.12.13",
-        "chai": "^5.1.1",
-        "dotenv": "^16.4.5",
+        "@wormhole-foundation/sdk-base": "^0.7.0-beta.4",
+        "@wormhole-foundation/sdk-definitions": "^0.7.0-beta.4",
+        "@wormhole-foundation/sdk-evm": "^0.7.0-beta.4",
+        "chai": "^4.3.4",
         "ethers": "^5.7.2",
-        "mocha": "^10.4.0",
-        "prettier": "^3.2.5",
+        "mocha": "^9.0.3",
         "ts-mocha": "^10.0.0",
         "typechain": "^8.3.2"
     }
