--- a/e2e/package.json
+++ b/e2e/package.json
@@ -7,6 +7,7 @@
         "test": "bash sh/run_test.sh"
     },
     "dependencies": {
+        "@solana/web3.js": "^1.91.6",
         "dotenv": "^16.4.5",
         "prettier": "^3.2.5"
     },
@@ -19,6 +20,7 @@
         "@wormhole-foundation/sdk-definitions": "^0.7.0-beta.4",
         "@wormhole-foundation/sdk-evm": "^0.7.0-beta.4",
         "chai": "^4.3.4",
+        "envfile": "^7.1.0",
         "ethers": "^5.7.2",
         "mocha": "^9.0.3",
         "ts-mocha": "^10.0.0",
