--- a/e2e/package.json
+++ b/e2e/package.json
@@ -8,24 +8,25 @@
     },
     "dependencies": {
         "@solana/web3.js": "^1.91.6",
-        "@wormhole-foundation/example-liquidity-layer-definitions": "file:../lib/example-liquidity-layer/wormhole-foundation-example-liquidity-layer-definitions-0.0.1.tgz",
-        "@wormhole-foundation/example-liquidity-layer-solana": "file:../lib/example-liquidity-layer/wormhole-foundation-example-liquidity-layer-solana-0.0.1.tgz",
-        "dotenv": "^16.4.5",
-        "prettier": "^3.2.5"
-    },
-    "devDependencies": {
-        "@typechain/ethers-v5": "^11.1.2",
         "@types/chai": "^4.3.16",
         "@types/mocha": "^10.0.6",
         "@types/node": "^20.12.13",
-        "@wormhole-foundation/sdk-base": "^0.7.0-beta.4",
+        "@wormhole-foundation/example-liquidity-layer-definitions": "file:../lib/example-liquidity-layer/wormhole-foundation-example-liquidity-layer-definitions-0.0.1.tgz",
+        "@wormhole-foundation/example-liquidity-layer-solana": "file:../lib/example-liquidity-layer/wormhole-foundation-example-liquidity-layer-solana-0.0.1.tgz",
+        "@wormhole-foundation/sdk-base": "^0.7.0-beta.5",
         "@wormhole-foundation/sdk-definitions": "^0.7.0-beta.4",
         "@wormhole-foundation/sdk-evm": "^0.7.0-beta.4",
+        "@wormhole-foundation/sdk-solana": "^0.7.0-beta.4",
         "chai": "^4.3.4",
+        "dotenv": "^16.4.5",
+        "mocha": "^9.0.3",
+        "prettier": "^3.2.5",
+        "ts-mocha": "^10.0.0"
+    },
+    "devDependencies": {
+        "@typechain/ethers-v5": "^11.1.2",
         "envfile": "^7.1.0",
         "ethers": "^5.7.2",
-        "mocha": "^9.0.3",
-        "ts-mocha": "^10.0.0",
         "typechain": "^8.3.2"
     }
 }
