--- a/e2e/package.json
+++ b/e2e/package.json
@@ -12,11 +12,12 @@
         "@types/mocha": "^10.0.6",
         "@types/node": "^20.12.13",
         "@wormhole-foundation/example-liquidity-layer-definitions": "file:../lib/example-liquidity-layer/wormhole-foundation-example-liquidity-layer-definitions-0.0.1.tgz",
+        "@wormhole-foundation/example-liquidity-layer-evm": "file:../lib/example-liquidity-layer/wormhole-foundation-example-liquidity-layer-evm-0.0.1.tgz",
         "@wormhole-foundation/example-liquidity-layer-solana": "file:../lib/example-liquidity-layer/wormhole-foundation-example-liquidity-layer-solana-0.0.1.tgz",
-        "@wormhole-foundation/sdk-base": "^0.7.0-beta.5",
-        "@wormhole-foundation/sdk-definitions": "^0.7.0-beta.4",
-        "@wormhole-foundation/sdk-evm": "^0.7.0-beta.4",
-        "@wormhole-foundation/sdk-solana": "^0.7.0-beta.4",
+        "@wormhole-foundation/sdk-base": "^0.7.0-beta.6",
+        "@wormhole-foundation/sdk-definitions": "^0.7.0-beta.6",
+        "@wormhole-foundation/sdk-evm": "^0.7.0-beta.6",
+        "@wormhole-foundation/sdk-solana": "^0.7.0-beta.6",
         "chai": "^4.3.4",
         "dotenv": "^16.4.5",
         "mocha": "^9.0.3",
