--- a/.github/workflows/solana.yml
+++ b/.github/workflows/solana.yml
@@ -55,6 +55,10 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
+      - name: Install Foundry
+        uses: foundry-rs/foundry-toolchain@v1
+        with:
+          version: nightly
       - uses: metadaoproject/setup-anchor@v2
         with:
           node-version: "20.11.0"
