e2e: finish gas swap with relay tests

--- a/solana/Makefile
+++ b/solana/Makefile
@@ -46,7 +46,7 @@ cargo-test: fast-transfer-sync
 anchor-test: anchor-test-setup
 	anchor test -- --features integration-test
 
-.PHONy: anchor-test-setup
+.PHONY: anchor-test-setup
 anchor-test-setup: ../node_modules $(CLONED_PROGRAMS)
 
 .PHONY: anchor-build-idl
