--- a/solana/package.json
+++ b/solana/package.json
@@ -14,7 +14,8 @@
         "test": "jest --config ./jest.config.ts --detectOpenHandles",
         "build:cjs": "tsc -p tsconfig.cjs.json",
         "build:esm": "tsc -p tsconfig.esm.json",
-        "build": "tsc -p tsconfig.json"
+        "build": "tsc -p tsconfig.json",
+        "clean":"rm -rf dist"
     },
     "dependencies": {
         "@certusone/wormhole-sdk": "^0.10.10",
